fix story card size on small screen

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -365,7 +365,7 @@
   }
 
   .card-index__image {
-    height: 200px;
+    height: 400px;
     /* Réduction de la hauteur de l'image */
   }
 
